--- a/index.html
+++ b/index.html
@@ -81,18 +81,11 @@
       font-weight: 900;
       margin-bottom: 4px;
       letter-spacing: 0.5px;
-      color: #059669;
+      color: #ffffff;
       text-shadow: 
-        -1px -1px 0 rgba(255, 255, 255, 0.3),
-        1px -1px 0 rgba(255, 255, 255, 0.3),
-        -1px 1px 0 rgba(255, 255, 255, 0.3),
-        1px 1px 0 rgba(255, 255, 255, 0.3),
-        -2px -2px 0 rgba(255, 255, 255, 0.2),
-        2px -2px 0 rgba(255, 255, 255, 0.2),
-        -2px 2px 0 rgba(255, 255, 255, 0.2),
-        2px 2px 0 rgba(255, 255, 255, 0.2),
-        0 4px 20px rgba(5, 150, 105, 0.8),
-        0 8px 40px rgba(5, 150, 105, 0.5);
+        0 2px 8px rgba(0, 0, 0, 0.3),
+        0 4px 16px rgba(0, 0, 0, 0.2),
+        0 6px 24px rgba(74, 159, 216, 0.4);
     }
 
     .chat-header p {
@@ -549,7 +542,7 @@
 </div>
 
 <script type="module">
-const CHATBOT_ID = "f0ad5840-a7f1-4c19-8004-e5b4111f61cf"; // Add Luna's chatbot ID
+const CHATBOT_ID = "YOUR_LUNA_CHATBOT_ID_HERE"; // Add Luna's chatbot ID
 const BACKEND_URL = "https://hsrpibsdfzzzvfmfakqu.supabase.co/functions/v1/chatbot-proxy";
 
 let sessionId = crypto.randomUUID();
